@@ -115,6 +115,14 @@
         <artifactId>maven-failsafe-plugin</artifactId>
         <groupId>org.apache.maven.plugins</groupId>
       </plugin>
+      <plugin>
+        <!-- suppress Java 21 dynamic agent loading warning, since there is no suitable fix yet -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
